fixed spacing.compared

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,11 +16,6 @@ h2 {
   font-size: 42px;
 }
 
- h1,
- h2,{
-color: white;
-
-}
 
  .download {
    color: Aquamarine;
